# GradesApp

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Makefile
src/: main.cpp
src/application/commands/: addstudentcommand.h  addsubjectcommand.h  editstudentcommand.h  removestudentcommand.h  removesubjectcommand.h  renamesubjectcommand.h  updategradecommand.h
src/application/handlers/: addstudenthandler.cpp  addstudenthandler.h  addsubjecthandler.cpp  addsubjecthandler.h  editstudenthandler.cpp  editstudenthandler.h  getallstudentshandler.cpp  getallstudentshandler.h  getallsubjectshandler.cpp  getallsubjectshandler.h  removestudenthandler.cpp  removestudenthandler.h  removesubjecthandler.cpp  removesubjecthandler.h  renamesubjecthandler.cpp  renamesubjecthandler.h  updategradehandler.cpp  updategradehandler.h
src/application/queries/: getallstudentsquery.h  getallsubjectsquery.h
src/domain/entities/: student.h  subject.h
src/domain/repositories/: istudentrepository.h  isubjectrepository.h
src/domain/value_objects/: albumnumber.h  subjectname.h
src/infrastructure/repositories/: sqlitedatabase.cpp  sqlitedatabase.h  sqlitestudentrepository.cpp  sqlitestudentrepository.h  sqlitesubjectrepository.cpp  sqlitesubjectrepository.h
src/presentation/dialogs/: studentdialog.cpp  studentdialog.h  studentdialog.ui  studenteditdialog.cpp  studenteditdialog.h  studenteditdialog.ui  subjectmanagerdialog.cpp  subjectmanagerdialog.h  subjectmanagerdialog.ui
src/presentation/models/: studenttablemodel.cpp  studenttablemodel.h
src/presentation/presenters/: mainwindowpresenter.cpp  mainwindowpresenter.h  studentdialogpresenter.cpp  studentdialogpresenter.h  studenteditdialogpresenter.cpp  studenteditdialogpresenter.h  subjectmanagerdialogpresenter.cpp  subjectmanagerdialogpresenter.h
src/presentation/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
